--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,20 @@ ul {
 }
 
 .nav-link.current {
+  position: relative;
   color: var(--accent-color);
+}
+
+.nav-link.current::after {
+  position: absolute;
+  bottom: -1px;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  background-color: var(--accent-color);
 }
 /* Logo */
 
@@ -275,13 +288,11 @@ ul {
 .services-list {
   display: flex;
   justify-content: space-between;
-  
 }
 
 .services-item {
   position: relative;
   margin-right: 30px;
-  
 }
 
 .services-item:last-child {
