--- a/css/style.css
+++ b/css/style.css
@@ -603,6 +603,31 @@ ul {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.work-overlay {
+  position: absolute;
+  display: block;
+  padding: 63px 24px;
+  width: 100%;
+  height: 294px;
+
+  font-size: 18px;
+  line-height: 1.56;
+
+  color: var(--secondary-accent-color);
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transition: transform var(--anim-duration) var(--anim-timing-function);
+}
+
+.work-link:hover .work-overlay {
+  transform: translateY(-100%);
+}
+
 .works-btn {
   padding: 6px 22px;
   font-family: inherit;
