--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,64 @@ ul {
   background-color: #188ce8;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+}
+
+.modal-form {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+
+  background-color: var(--secondary-accent-color);
+}
+
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  color: #000;
+  background-color: transparent;
+}
+
+.close-icon {
+  fill: currentColor;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: 0;
+  pointer-events: none;
+}
 /* Benefits section */
 
 .benefits-list {
