--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,10 @@ ul {
   top: 0;
   left: 0;
   z-index: 1;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity var(--anim-duration) var(--anim-timing-function),
+    visibility var(--anim-duration) var(--anim-timing-function);
 
   width: 100%;
   height: 100%;
@@ -242,15 +246,26 @@ ul {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 .modal-wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
   z-index: 1;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform var(--anim-duration) var(--anim-timing-function);
 
   width: 528px;
   height: 581px;
+}
+
+.backdrop.is-hidden .modal-wrapper {
+  transform: translate(-50%, 50%) scale(0.25);
 }
 
 .modal-form {
@@ -283,27 +298,6 @@ ul {
   fill: currentColor;
 }
 
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.backdrop .modal-wrapper {
-  animation: modal-scale 2000ms linear;
-}
-
-@keyframes modal-scale {
-  0% {
-    transform: scale(0);
-  }
-  50% {
-    transform: scale(0.5);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
 /* Benefits section */
 
 .benefits-list {
